src/index.css
@import url("https://fonts.googleapis.com/css?family=Yeseva+One");

* {
  box-sizing: border-box;
}
html,
body {
  height: 100%;
  font-family: "Yeseva One", cursive;
}

.main {
  flex: 1 0 auto;
  padding-bottom: 20px;
}

.wrapper {
  min-height: 100%;
  margin-bottom: -50px;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  font-weight: 600;
  line-height: 1.5;
  letter-spacing: 0.1em;
  background: #ffffff;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 500;
  margin: 5px 0;
  line-height: 1.25;
}

h1 {
  font-size: 4.25rem;
  text-align: center;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

/* header container/ nav section */
.container {
  height: 275px;
}

.nav {
  font-size: 20px;
  font-family: "Yeseva One";
}

nav li {
  cursor: pointer;
}

/* header container/ nav section ends */

/* About Me Section */
.summary {
  font-size: 20px;
  padding-right: 200px;
  font-family: "Yeseva One";
}

.me {
  border-radius: 50%;
  max-width: 50%;
  margin-left: 100px;
}

.about {
  padding: 100px 50px 0px 50px;
  display: flex;
}

.badge {
  border-radius: 50%;
  max-width: 50%;
  margin-left: 100px;
}

/* About Me Section Ends */

/* Projects Section */

.projectsbox {
  display: flex;
  align-items: center;
  justify-content: center;
}

.projects {
  font-size: 45px;
  color: #000000;
  text-align: center;
  border-bottom: 3px solid;
  width: 30%;
  margin: auto;
  padding-top: 40px;
  padding-bottom: 20px;
  font-family: "Yeseva One";
}

.project-name {
  font-size: 30px;
  padding-top: 25px;
  text-align: center;
  font-family: "Yeseva One";
}
/* Projects Section End */

/* Footer */

footer {
  width: 100%;
  bottom: 0;
  position: fixed;
  height: 65px;
  flex-shrink: 0;
  text-align: center;
  padding: 10px;
}

/* Footer Ends */

/* Projects Effect */

figure.snip0016 {
  color: rgb(255, 255, 255);
  font-family: "Yeseva One";
  position: relative;
  overflow: hidden;
  min-width: 900px;
  max-width: 900px;
  max-height: 800px;
  width: 100%;
  background: #000000;
  text-align: center;
}
figure.snip0016 * {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
figure.snip0016 img {
  max-width: 100%;
  opacity: 1;
  width: 100%;
  -webkit-transition: opacity 0.35s;
  transition: opacity 0.35s;
}
figure.snip0016 figcaption {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 30px 3em;
  width: 100%;
  height: 100%;
}
figure.snip0016 figcaption::before {
  position: absolute;
  top: 30px;
  right: 30px;
  bottom: 30px;
  left: 100%;
  border-left: 4px solid rgba(255, 255, 255, 0.8);
  content: "";
  opacity: 0;
  background-color: rgba(0, 0, 0, 0.5);
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  -webkit-transition-delay: 0.6s;
  transition-delay: 0.6s;
}
figure.snip0016 h2,
figure.snip0016 p {
  margin: 0 0 5px;
  opacity: 0;
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, -webkit-transform 0.35s, -moz-transform 0.35s,
    -o-transform 0.35s, transform 0.35s;
}
figure.snip0016 h2 {
  word-spacing: -0.15em;
  font-weight: 300;
  text-transform: uppercase;
  -webkit-transform: translate3d(30%, 0%, 0);
  transform: translate3d(30%, 0%, 0);
  -webkit-transition-delay: 0.3s;
  transition-delay: 0.3s;
}

figure.snip0016 p {
  font-weight: 200;
  -webkit-transform: translate3d(0%, 30%, 0);
  transform: translate3d(0%, 30%, 0);
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  color: #fcfcfc;
  font-size: 25px;
  padding-top: 80px;
}
figure.snip0016 a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  color: #ffffff;
}
figure.snip0016:hover img {
  opacity: 0.15;
}
figure.snip0016:hover figcaption h2 {
  opacity: 1;
  -webkit-transform: translate3d(0%, 0%, 0);
  transform: translate3d(0%, 0%, 0);
  -webkit-transition-delay: 0.4s;
  transition-delay: 0.4s;
  color: #ffffff;
  font-family: "Yeseva One";
}
figure.snip0016:hover figcaption p {
  opacity: 0.9;
  -webkit-transform: translate3d(0%, 0%, 0);
  transform: translate3d(0%, 0%, 0);
  -webkit-transition-delay: 0.6s;
  transition-delay: 0.6s;
}
figure.snip0016:hover figcaption::before {
  background: rgba(255, 255, 255, 0);
  left: 30px;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

/* End of Portfolio effect */

/* Contact Form */

.ContactForm {
  text-align: center;
  max-width: 300px;
  margin: 20px auto;
  padding-top: 100px;
  font-family: "Yeseva One";
}

Form {
  border: 1px solid lightgray;
  border-radius: 10px;
  padding: 20px;
}

/* Contact Form Ends */

/* media query for tables and smaller */
@media screen and (max-width: 768px) {
  section {
    padding: 30px 15px;
  }

  .step h3 {
    flex: 1 100%;
    text-align: center;
  }

  .step-info {
    flex: 2 100%;
    text-align: center;
    justify-content: center;
  }

  .step-img {
    flex: 0 32%;
    margin-right: 0;
    margin-top: 15px;
    margin-bottom: 15px;
  }

  .step-text {
    flex: 100%;
  }
}

/* media query for mobile phones and smaller */
@media screen and (max-width: 575px) {
  .container {
    width: 50%;
  }

  .section-title {
    width: 95%;
  }

  .intro p {
    width: 100%;
  }

  .trainer {
    flex: 0 100%;
  }

  .contact-info {
    text-align: center;
  }

  .contact-info > * {
    flex: 0 100%;
  }

  .contact-form {
    order: 3;
  }
}

